--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                     <li><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="header-contacts list">
-                <li><a href="mailto:info@devstudio.com" class=" contacts-link link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
-            </ul>
+            <div class="header-conects">
+                <ul class="header-contacts list">
+                    <li><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
+                </ul>
+            </div>
         </div>
 
     </header>
