--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
                 <a href="./index.html" class="logo-link link"><span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
                 <ul class="header-list list">
-                    <li><a href="./index.html" class="header-link link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
-                    <li><a href="" class="header-link link">Контакты</a></li>
+                    <li class="nav-item"><a href="./index.html" class="link header-link">Студия</a></li>
+                    <li class="nav-item"><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+                    <li class="nav-item"><a href="./" class="link header-link">Контакты</a></li>
                 </ul>
             </nav>
             <div class="header-conects">
                 <ul class="header-contacts list">
-                    <li><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
+                    <li class="contact-item"><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
+                    <li class="contact-item"><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
                 </ul>
             </div>
         </div>
-
     </header>
     <main>
          <!-- Герой -->
