--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Студия</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -38,23 +39,23 @@
             </div>
         </section>
         <!-- Особенности -->
-        <section>
+        <section class="features">
             <div class="container">
                 <h2 class="visually-hidden">Особенности</h2>
-                <ul class="list">
-                    <li>
+                <ul class="features-list list">
+                    <li class="features-item">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -66,10 +67,10 @@
         <section class="about">
             <div class="container">
                 <h2 class="about-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li> <img src="images/example1.jpg" alt="Примеры работ" width="370"></li>
-                    <li> <img src="images/example2.jpg" alt="Примеры работ" width="370"></li>
-                    <li><img src="images/example3.jpg" alt="Примеры работ" width="370"></li>
+                <ul class="about-list list">
+                    <li class="about-item"> <img src="images/example1.jpg" alt="Примеры работ" width="370"></li>
+                    <li class="about-item"> <img src="images/example2.jpg" alt="Примеры работ" width="370"></li>
+                    <li class="about-item"><img src="images/example3.jpg" alt="Примеры работ" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -77,24 +78,24 @@
          <section class="team">
              <div class="container">
                 <h2 class="team-title">Наша команда</h2>
-                <ul class="list">
-                    <li>
-                        <img src="images/worker1.jpg" alt="Наш сотрудник" width="270">
+                <ul class="team-list list">
+                    <li class="team-item">
+                        <img class="team-img" src="images/worker1.jpg" alt="Наш сотрудник" width="270">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p class="team-position">Product Designer</p>
                     </li>
-                    <li>
-                        <img src="images/worker2.jpg" alt="Наш сотрудник" width="270">
+                    <li class="team-item">
+                        <img class="team-img" src="images/worker2.jpg" alt="Наш сотрудник" width="270">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p class="team-position">Frontend Developer</p>
                     </li>
-                    <li>
-                        <img src="images/worker3.jpg" alt="Наш сотрудник" width="270">
+                    <li class="team-item">
+                        <img class="team-img" src="images/worker3.jpg" alt="Наш сотрудник" width="270">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p class="team-position">Marketing</p>
                     </li>
-                    <li>
-                        <img src="images/worker4.jpg" alt="Наш сотрудник" width="270">
+                    <li class="team-item">
+                        <img class="team-img" src="images/worker4.jpg" alt="Наш сотрудник" width="270">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p class="team-position">UI Designer</p>
                     </li>
@@ -104,18 +105,18 @@
     </main>
     <footer>
         <div class="container footer">
-                    <a href="./index.html" class="footer-link link"><span class="footer-logo">Web</span> Studio</a>
-                    <address>
+                    <a class="footer-link link"href="./index.html"><span class="footer-logo">Web</span> Studio</a>
+                    <address class="footer-adress">
                         <ul class="list">
-                            <li>
+                            <li class="adress-item">
                                 <a target="_blank"
                                     href="https://www.google.com.ua/maps/search/%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26/@50.428065,30.52055,13z?hl=ru" class="footer-map link">г.
                                     Киев, пр-т Леси Украинки, 26</a>
                             </li>
-                            <li>
+                            <li class="adress-item">
                                 <a href="mailto:info@devstudio.com" class="footer-contact link">info@example.com</a>
                             </li>
-                            <li>
+                            <li class="adress-item">
                                 <a href="tel:+380961111111" class="footer-contact link">+38 099 111 11 11</a>
                             </li>
                     
