--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,24 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="container">
             <a href="./index.html" class="logo-link link"><span class="header-logo">Web</span>Studio</a>
-            <ul class="list">
-                <li><a href="./index.html" class="header-link link">Студия</a></li>
-                <li><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
-                <li><a href="" class="header-link link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="list">
-            <li><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
-        </ul>
+            <nav class="header-nav">
+                <ul class="header-list list">
+                    <li class="nav-item"><a href="./index.html" class="link header-link">Студия</a></li>
+                    <li class="nav-item"><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+                    <li class="nav-item"><a href="./" class="link header-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header-conects">
+                <ul class="header-contacts list">
+                    <li class="contact-item"><a href="mailto:info@devstudio.com"
+                            class="contacts-link link">info@devstudio.com</a></li>
+                    <li class="contact-item"><a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a></li>
+                </ul>
+            </div>
+        </div>
+
     </header>
 <main>
     <section>
@@ -86,27 +92,26 @@
 
 </main>
 <footer>
-    <div class="footer">
-        <a href="./index.html" class="footer-link link"><span class="footer-logo">Web</span>Studio</a>
-        <address>
+    <div class="container footer">
+        <a class="footer-link link" href="./index.html"><span class="footer-logo">Web</span> Studio</a>
+        <address class="footer-adress">
             <ul class="list">
-                <li>
+                <li class="adress-item">
                     <a target="_blank"
                         href="https://www.google.com.ua/maps/search/%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26/@50.428065,30.52055,13z?hl=ru"
-                        class="footer-map link">г. Киев, пр-т Леси Украинки, 26</a>
+                        class="footer-map link">г.
+                        Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
+                <li class="adress-item">
                     <a href="mailto:info@devstudio.com" class="footer-contact link">info@example.com</a>
                 </li>
-                <li>
+                <li class="adress-item">
                     <a href="tel:+380961111111" class="footer-contact link">+38 099 111 11 11</a>
                 </li>
-        
+    
             </ul>
         </address>
-
     </div>
 </footer>
-
 </body>
 </html>
