--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="hero">
             <div class="container hero-contend">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="hero-btn">Заказать Услугу</button>
+                <button type="button" class="hero-btn btn">Заказать Услугу</button>
             </div>
         </section>
         <!-- Особенности -->
