--- a/portfolio.html
+++ b/portfolio.html
@@ -33,61 +33,63 @@
 
     </header>
 <main>
-    <section>
-        <ul class="list">
-            <li><button class="portfolio-btn">Все</button></li>
-            <li><button class="portfolio-btn">Веб-Сайты</button></li>
-            <li><button class="portfolio-btn">Приложения</button></li>
-            <li><button class="portfolio-btn">Дизайн</button></li>
-            <li><button class="portfolio-btn">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-            <li>
-                <img src="images/rabota1.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-text">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="images/rabota2.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Постер New Orlean vs Golden Sta</h3>
-                <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li>
-                <img src="images/rabota3.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img src="images/rabota4.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Проект Prime</h3>
-                <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li>
-                <img src="images/rabota5.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Проект Boxes</h3>
-                <p class="portfolio-text">Приложение</p>
-            </li>
-            <li>
-                <img src="images/rabota6.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-text">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="images/rabota7.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Издание Limited Edition</h3>
-                <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li>
-                <img src="images/rabota8.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Проект LAB</h3>
-                <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li>
-                <img src="images/rabota9.jpg" alt="Фото пример работы" width="370">
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-text">Приложение</p>
-            </li>
-        </ul>
+    <section class="porfolio">
+        <div class="container">
+            <ul class="porfolio-buttons list">
+                <li class="portfolio-item"><button class="portfolio-btn btn">Все</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn">Веб-Сайты</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn">Приложения</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn">Дизайн</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn">Маркетинг</button></li>
+            </ul>
+            <ul class="example-list list">
+                <li class="example-item">
+                    <img src="images/rabota1.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Технокряк</h3>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota2.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Постер New Orlean vs Golden Sta</h3>
+                    <p class="portfolio-text">Дизайн</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota3.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota4.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Проект Prime</h3>
+                    <p class="portfolio-text">Маркетинг</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota5.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Проект Boxes</h3>
+                    <p class="portfolio-text">Приложение</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota6.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota7.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Издание Limited Edition</h3>
+                    <p class="portfolio-text">Дизайн</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota8.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Проект LAB</h3>
+                    <p class="portfolio-text">Маркетинг</p>
+                </li>
+                <li class="example-item">
+                    <img src="images/rabota9.jpg" alt="Фото пример работы" width="370">
+                    <h3 class="portfolio-title">Growing Business</h3>
+                    <p class="portfolio-text">Приложение</p>
+                </li>
+            </ul>
+        </div>
     </section>
 
 </main>
