--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
                 <a href="./index.html" class="logo-link link"><span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
@@ -35,7 +35,7 @@
         <section class="hero">
             <div class="container hero-contend">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="hero-btn btn">Заказать Услугу</button>
+                <button type="button" class="hero-btn btn">Заказать услугу</button>
             </div>
         </section>
         <!-- Особенности -->
@@ -81,30 +81,38 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img class="team-img" src="images/worker1.jpg" alt="Наш сотрудник" width="270">
+                        <div class="team-about">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p class="team-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="images/worker2.jpg" alt="Наш сотрудник" width="270">
+                        <div class="team-about">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p class="team-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="images/worker3.jpg" alt="Наш сотрудник" width="270">
+                        <div class="team-about">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p class="team-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="images/worker4.jpg" alt="Наш сотрудник" width="270">
+                        <div class="team-about">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p class="team-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
          </section>
     </main>
-    <footer>
-        <div class="container footer">
+    <footer class="footer">
+        <div class="container">
                     <a class="footer-link link"href="./index.html"><span class="footer-logo">Web</span> Studio</a>
                     <address class="footer-adress">
                         <ul class="list">
