--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    <header>
+    <header class="header portfolio-header">
         <div class="container">
             <a href="./index.html" class="logo-link link"><span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
@@ -33,11 +34,11 @@
 
     </header>
 <main>
-    <section class="porfolio">
+    <section class="portfolio">
         <div class="container">
             <ul class="porfolio-buttons list">
                 <li class="portfolio-item"><button class="portfolio-btn btn">Все</button></li>
-                <li class="portfolio-item"><button class="portfolio-btn btn">Веб-Сайты</button></li>
+                <li class="portfolio-item"><button class="portfolio-btn btn">Веб-cайты</button></li>
                 <li class="portfolio-item"><button class="portfolio-btn btn">Приложения</button></li>
                 <li class="portfolio-item"><button class="portfolio-btn btn">Дизайн</button></li>
                 <li class="portfolio-item"><button class="portfolio-btn btn">Маркетинг</button></li>
@@ -45,56 +46,74 @@
             <ul class="example-list list">
                 <li class="example-item">
                     <img src="images/rabota1.jpg" alt="Фото пример работы" width="370">
+                    <div class="example-about">
                     <h3 class="portfolio-title">Технокряк</h3>
                     <p class="portfolio-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota2.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Постер New Orlean vs Golden Sta</h3>
-                    <p class="portfolio-text">Дизайн</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Постер New Orlean vs Golden Sta</h3>
+                        <p class="portfolio-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota3.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Ресторан Seafood</h3>
+                        <p>Приложение</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota4.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Проект Prime</h3>
-                    <p class="portfolio-text">Маркетинг</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Проект Prime</h3>
+                        <p class="portfolio-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota5.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Проект Boxes</h3>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Проект Boxes</h3>
+                        <p class="portfolio-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota6.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                    <p class="portfolio-text">Веб-сайт</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                        <p class="portfolio-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota7.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Издание Limited Edition</h3>
-                    <p class="portfolio-text">Дизайн</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Издание Limited Edition</h3>
+                        <p class="portfolio-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota8.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Проект LAB</h3>
-                    <p class="portfolio-text">Маркетинг</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Проект LAB</h3>
+                        <p class="portfolio-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="example-item">
                     <img src="images/rabota9.jpg" alt="Фото пример работы" width="370">
-                    <h3 class="portfolio-title">Growing Business</h3>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="example-about">
+                        <h3 class="portfolio-title">Growing Business</h3>
+                        <p class="portfolio-text">Приложение</p>
+                    </div>
                 </li>
             </ul>
         </div>
     </section>
 
 </main>
-<footer>
-    <div class="container footer">
+<footer class="footer">
+    <div class="container">
         <a class="footer-link link" href="./index.html"><span class="footer-logo">Web</span> Studio</a>
         <address class="footer-adress">
             <ul class="list">
